--- a/app/src/main/res/layout/cards_list.xml
+++ b/app/src/main/res/layout/cards_list.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -9,7 +13,10 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        card_view:cardCornerRadius="4dp">
+        card_view:cardUseCompatPadding="true"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="2dp"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -18,49 +25,21 @@
             <ImageView
                 android:id="@+id/recipe_image"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@drawable/shadow_overlay"
+                android:layout_height="180dp"
                 android:gravity="center"
-                android:background="@color/black"/>
+                android:background="@color/grey"/>
 
             <TextView
-                android:id="@+id/receipe_name"
+                android:id="@+id/recipe_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/recipe_image"
-                android:textSize="17sp"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/black"
-                android:text="A Guide To Rocky Mountain Vacations"/>
-
-
-
-            <!--<TextView
-                android:id="@+id/profile_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:layout_below="@id/name_text_view"
-                android:layout_toRightOf="@id/profile_image"
-                android:layout_marginTop="9dp"
-                android:layout_marginBottom="12dp"
-                android:layout_marginLeft="7dp"
-                android:textColor="@color/name_text_color"
-                android:text="Ryan Estrada"/>
-
-
-            <TextView
-                android:id="@+id/time_stamp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:gravity="right"
-                android:textSize="14sp"
-                android:layout_below="@id/name_text_view"
-                android:layout_toRightOf="@id/profile_name"
-                android:layout_marginTop="9dp"
-                android:layout_marginBottom="12dp"
-                android:text="2 hours ago"/> -->
+                android:textSize="24sp"
+                android:paddingTop="24dp"
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:textColor="@color/black" />
 
         </RelativeLayout>
 
