--- a/app/src/main/res/layout-sw600dp/cards_list.xml
+++ b/app/src/main/res/layout-sw600dp/cards_list.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:weightSum="3"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
@@ -10,7 +12,7 @@
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         card_view:cardUseCompatPadding="true"
@@ -42,6 +44,7 @@
                 android:textColor="@color/black" />
 
         </RelativeLayout>
+
 
     </android.support.v7.widget.CardView>
 
