--- a/app/src/main/res/layout/cards_list_recipe_details.xml
+++ b/app/src/main/res/layout/cards_list_recipe_details.xml
@@ -27,11 +27,37 @@
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 android:paddingTop="24dp"
-                android:paddingBottom="16dp"
+                android:paddingBottom="0dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:textColor="@color/black"
-                android:text="test"/>
+                />
+
+            <TextView
+                android:id="@+id/recipe_ingredient_quantity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/recipe_ingredient"
+                android:textSize="16sp"
+                android:paddingTop="0dp"
+                android:paddingBottom="24dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="0dp"
+                android:textColor="@color/grey"
+                />
+
+            <TextView
+                android:id="@+id/recipe_ingredient_measure"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/recipe_ingredient_quantity"
+                android:textSize="16sp"
+                android:paddingTop="0dp"
+                android:paddingBottom="24dp"
+                android:paddingLeft="0dp"
+                android:paddingRight="16dp"
+                android:textColor="@color/grey"
+                />
 
         </RelativeLayout>
 
