--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#795548</color>
+    <color name="colorPrimaryDark">#6D4C41</color>
     <color name="colorAccent">#FF4081</color>
     <color name="grey">#666363</color>
     <color name="black">#050505</color>
-
+    <color name="grey_white">#bab6b6</color>
+    <color name="white">#fcfbfb</color>
+    <color name="custom">#795548</color>
 </resources>
