--- a/app/src/main/res/layout/activity_recipe_step_instruction.xml
+++ b/app/src/main/res/layout/activity_recipe_step_instruction.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="10dp"
+    android:orientation="vertical"
     android:paddingBottom="10dp"
     android:paddingLeft="15dp"
-    android:paddingRight="15dp">
+    android:paddingRight="15dp"
+    android:paddingTop="10dp">
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_recipe_step_instruction"
-        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        card_view:cardUseCompatPadding="true"
-        card_view:cardCornerRadius="4dp"
+        android:layout_gravity="center"
         card_view:cardBackgroundColor="@color/custom"
-        card_view:cardElevation="2dp">
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="2dp"
+        card_view:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -26,15 +26,14 @@
                 android:id="@+id/recipe_step_instruction"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:paddingTop="16dp"
+                android:gravity="center_vertical"
                 android:paddingBottom="16dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:gravity="center_vertical"
+                android:paddingTop="16dp"
                 android:textAlignment="gravity"
                 android:textColor="@color/white"
-                />
+                android:textSize="20sp" />
 
         </RelativeLayout>
 
