--- a/app/src/main/res/layout/activity_recipe_steps.xml
+++ b/app/src/main/res/layout/activity_recipe_steps.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_recipe_steps"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_recipe_details_fregment_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_ingredient_head"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_recipe_steps"
+    <FrameLayout
+        android:id="@+id/recipe_steps_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/recycler_view_ingredient_head">
-    </android.support.v7.widget.RecyclerView>
+        android:scaleType="centerInside" />
+</LinearLayout>
 
-</RelativeLayout>
+
+
