--- a/app/src/main/res/layout/baking_widget.xml
+++ b/app/src/main/res/layout/baking_widget.xml
@@ -3,11 +3,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/widget_image_sample"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:src="@drawable/baking" />
+    <GridView
+        android:id="@+id/widget_grid_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="1"
+        android:columnWidth="25dp"
+        android:layout_margin="2dp"
+        android:horizontalSpacing="5dp"
+        android:verticalSpacing="5dp"
+        />
 
 </LinearLayout>
