--- a/app/src/main/res/layout/widget_grid_view.xml
+++ b/app/src/main/res/layout/widget_grid_view.xml
@@ -1,7 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <GridView
         android:id="@+id/widget_grid_view"
@@ -12,6 +13,7 @@
         android:layout_margin="2dp"
         android:horizontalSpacing="5dp"
         android:verticalSpacing="5dp"
-        />
+         />
 
-</LinearLayout>
+
+</FrameLayout>
