--- a/app/src/main/res/layout/fragment_recipe_steps_snap.xml
+++ b/app/src/main/res/layout/fragment_recipe_steps_snap.xml
@@ -47,9 +47,9 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="188dp"
+        android:layout_marginTop="200dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
             android:id="@+id/previousStep"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginRight="100dp"
             android:background="@drawable/back_icon"
             android:backgroundTintMode="src_over"
             android:elevation="6dp"
@@ -69,7 +69,7 @@
             android:id="@+id/nextStep"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="100dp"
             android:background="@drawable/forward_icon"
             android:backgroundTintMode="src_over"
             android:padding="40dp" />
