--- a/app/src/main/res/layout/baking_widget_grid_view.xml
+++ b/app/src/main/res/layout/baking_widget_grid_view.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <GridView
-        android:id="@+id/widget_grid_view"
+        android:id="@+id/baking_widget_grid_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="1"
@@ -13,7 +13,8 @@
         android:layout_margin="2dp"
         android:horizontalSpacing="5dp"
         android:verticalSpacing="5dp"
-         />
+        />
 
 
 </FrameLayout>
+
