--- a/app/src/main/res/layout/baking_widget_grid_view_item.xml
+++ b/app/src/main/res/layout/baking_widget_grid_view_item.xml
@@ -3,12 +3,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#09C"
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
 
 
     <TextView
-        android:id="@+id/widget_grid_view_item"
+        android:id="@+id/baking_widget_grid_view_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="viewStart"
