--- a/app/src/main/res/layout/baking_widget_grid_view.xml
+++ b/app/src/main/res/layout/baking_widget_grid_view.xml
@@ -1,20 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#fff"
+    android:orientation="vertical"
+    android:padding="@dimen/widget_margin">
 
-    <GridView
-        android:id="@+id/baking_widget_grid_view"
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/widget_appBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="1"
-        android:columnWidth="25dp"
-        android:layout_margin="2dp"
-        android:horizontalSpacing="5dp"
-        android:verticalSpacing="5dp"
-        />
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary">
+
+        <TextView
+            android:id="@+id/appwidget_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:textStyle="bold|italic" />
+    </FrameLayout>
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <GridView
+            android:id="@+id/baking_widget_grid_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:columnWidth="25dp"
+            android:horizontalSpacing="5dp"
+            android:numColumns="1"
+            android:verticalSpacing="5dp" />
 
 
-</FrameLayout>
+    </FrameLayout>
+
+</LinearLayout>
 
