--- a/app/src/main/res/layout/baking_widget_grid_view_item.xml
+++ b/app/src/main/res/layout/baking_widget_grid_view_item.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="viewStart"
+         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="10sp"
         android:layout_margin="3dp"
