--- a/app/src/main/res/layout/activity_recipe_step_instruction.xml
+++ b/app/src/main/res/layout/activity_recipe_step_instruction.xml
@@ -8,7 +8,8 @@
     android:paddingRight="15dp"
     android:paddingTop="10dp">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_recipe_step_instruction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
